--- a/src/w10/assignment/style/style.css
+++ b/src/w10/assignment/style/style.css
@@ -70,6 +70,7 @@ body {
 .main_name__type-2 {
   font-size: 1.25rem;
   color: #10284b;
+  padding-bottom: 1.5rem;
 }
 
 .section {
@@ -90,8 +91,15 @@ body {
 .grid--opt-2 {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: minmax(200px 1fr);
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+  row-gap: 1.5rem;
+}
+.grid--opt-3 {
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: minmax(200px 1fr);
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
   row-gap: 1.5rem;
 }
 
@@ -146,4 +154,32 @@ body {
 .resources {
   color: #381fd1;
   font-size: 1rem;
+}
+
+.grid__item-grid__item--nth-7 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.grid__item-grid__item--nth-8 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.grid__item-grid__item--nth-9 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.bottom {
+  margin-inline: auto;
+  background-color: #10284b;
+  margin-top: 4rem;
+  padding: 18.75rem;
 }
