--- a/src/w10/assignment/style/style.scss
+++ b/src/w10/assignment/style/style.scss
@@ -83,6 +83,7 @@ body {
   &__type-2 {
     font-size: 1.25rem;
     color: #10284b;
+    padding-bottom: 1.5rem;
   }
 }
 
@@ -106,7 +107,13 @@ body {
   &--opt-2 {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: minmax(200px 1fr);
-    column-gap: 0.75rem;
+    column-gap: 2rem;
+    row-gap: 1.5rem;
+  }
+  &--opt-3 {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: minmax(200px 1fr);
+    column-gap: 2rem;
     row-gap: 1.5rem;
   }
 }
@@ -158,6 +165,33 @@ body {
   color: #381fd1;
   font-size: 1rem;
 }
+
+.grid__item-grid__item--nth-7 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+.grid__item-grid__item--nth-8 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+.grid__item-grid__item--nth-9 {
+  border-radius: 0.3125rem;
+  border: 0.05rem solid rgb(229, 229, 230);
+  padding: 1.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.bottom {
+  margin-inline: auto;
+  background-color: #10284b;
+  margin-top: 4rem;
+  padding: 18.75rem;
+}
+
 // body {
 //   margin: 0;
 //   font-size: 1.5rem;
